Fixes position of "Follow Us" panel on mobile footer.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,6 +80,7 @@ img {
 .wrap {
     background-color: #F7F7F7;
     height: 100vh;
+    margin-bottom: -150px;
 }
 
 .wrap .title {
