--- a/assets/scss/module/_footer.scss
+++ b/assets/scss/module/_footer.scss
@@ -12,7 +12,7 @@ footer>.black-section {
 footer>.mobile-only {
     display: none;
     color: black;
-    background-color: #F7F7F7;
+    background: transparent;
     padding: 50px;
     padding-top: 20px;
     padding-bottom: 30px;
